--- a/CSS/home.css
+++ b/CSS/home.css
@@ -100,7 +100,7 @@ p{
     margin: auto;
     height: 100vh;
     width: 100vw; 
-    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)),url(./games.webp);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)),url(../Asset/games.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
